--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -23,8 +23,8 @@ contributors:
  comments: 
 -
  name: Joud
- surname: 
- mail: None
+ surname: Sayed Issa
+ mail: joudsayedissa@gmail.com
  organization: None
  project: 
  comments: 
