--- a/SmartPointOfInteraction/new_model.yaml
+++ b/SmartPointOfInteraction/new_model.yaml
@@ -243,6 +243,7 @@ SmartPointOfInteraction:
       type: array
       uniqueItems: true
     seeAlso:
+      description: 'list of uri pointing to additional resources about the item'
       oneOf:
         - items:
             - format: uri
@@ -251,6 +252,7 @@ SmartPointOfInteraction:
           type: array
         - format: uri
           type: string
+      type: Property
     source:
       description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
       type: Property
