--- a/SmartPointOfInteraction/new_model.yaml
+++ b/SmartPointOfInteraction/new_model.yaml
@@ -5,27 +5,36 @@ SmartPointOfInteraction:
       description: 'The mailing address.'
       properties:
         addressCountry:
+          description: 'Property. The country. For example, Spain. Model:''https://schema.org/Text'''
           type: string
         addressLocality:
+          description: 'Property. The locality in which the street address is, and which is in the region. Model:''https://schema.org/Text'''
           type: string
         addressRegion:
+          description: 'Property. The region in which the locality is, and which is in the country. Model:''https://schema.org/Text'''
           type: string
         areaServed:
+          description: 'Property. The geographic area where a service or offered item is provided. Model:''https://schema.org/Text'''
           type: string
         postOfficeBoxNumber:
+          description: 'Property. The post office box number for PO box addresses. For example, Spain. Model:''https://schema.org/Text'''
           type: string
         postalCode:
+          description: 'Property. The postal code. For example, Spain. Model:''https://schema.org/Text'''
           type: string
         streetAddress:
+          description: 'Property. The street address. Model:''https://schema.org/Text'''
           type: string
       type: Property
     alternateName:
       description: 'An alternative name for this item'
       type: Property
     applicationUrl:
-      description: 'This field specifies the real URL containing the solution or application'
+      description: 'This field specifies the real URL containing the solution or application (information, co-creation, etc) while the SmartSpot ''announcedUrl'' field specifies the broadcasted URL which could be this same URL or a shortened one'
       format: uri
-      type: string
+      type: Property
+      x-ngsi:
+        model: https://schema.org/URL
     areaCovered:
       $id: https://geojson.org/schema/Geometry.json
       $schema: "http://json-schema.org/draft-07/schema#"
@@ -174,23 +183,29 @@ SmartPointOfInteraction:
           type: object
       title: 'GeoJSON Geometry'
     areaServed:
-      description: 'The geographic area where a service or offered item is provided.'
+      description: 'The geographic area where a service or offered item is provided'
       type: Property
+      x-ngsi:
+        model: https://schema.org/Text
     availability:
-      description: 'Specifies the functionality intervals in which the announcements will be sent'
-      type: string
+      description: 'Specifies the time intervals in which this interactive service is generally available. It is noteworthy that Smart Spots have their own real availability in order to allow advanced configurations. The syntax must be conformant with schema.org. For instance, a service which is only active on dayweeks will be encoded as ''availability'': ''Mo,Tu,We,Th,Fr,Sa 09:00-20:00''.'
+      type: Property
+      x-ngsi:
+        model: https://schema.org/openingHours
     category:
-      description: 'Defines the type of interaction'
+      description: 'Defines the type of interaction. Enum:''co-creation, entertainment, information, infotainment'''
       items:
         enum:
-          - information
-          - entertainment
-          - infotainment
           - co-creation
+          - entertainment
+          - information
+          - infotainment
         type: string
       minItems: 1
-      type: array
+      type: Property
       uniqueItems: true
+      x-ngsi:
+        model: http://schema.org/Text
     dataProvider:
       description: 'A sequence of characters identifying the provider of the harmonised data entity.'
       type: Property
@@ -215,6 +230,8 @@ SmartPointOfInteraction:
         - description: 'Property. Identifier format of any NGSI entity'
           format: uri
           type: string
+      description: 'Unique identifier of the entity'
+      type: Property
     location:
       $id: https://geojson.org/schema/Geometry.json
       $schema: "http://json-schema.org/draft-07/schema#"
@@ -227,21 +244,28 @@ SmartPointOfInteraction:
       description: 'A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
+        description: 'Property. Unique identifier of the entity'
       type: Property
     refRelatedEntity:
-      description: 'List of entities improved with this Smart Point of Interaction. The entity type could be any such as a “Parking”, “Point of Interest”, etc'
+      description: 'List of entities improved with this Smart Point of Interaction'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
+        description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: array
+      type: Relationship
       uniqueItems: true
+      x-ngsi:
+        model: 'The entity type could be any such as a “Parking”, “Point of Interest”, etc.http://schema.org/Text'
     refSmartSpot:
-      description: 'Reference to one or more entity of type SmartSpot'
+      description: ' References to the “Smart Spot” devices which are part of the Smart Point of Interaction'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
+        description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: array
+      type: Property
       uniqueItems: true
+      x-ngsi:
+        model: https://schema.org/URL
     seeAlso:
       description: 'list of uri pointing to additional resources about the item'
       oneOf:
@@ -257,10 +281,10 @@ SmartPointOfInteraction:
       description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
       type: Property
     type:
-      description: 'NGSI Entity type'
+      description: 'NGSI Entity type. It has to be SmartPointOfInteraction'
       enum:
         - SmartPointOfInteraction
-      type: string
+      type: Property
   required:
     - id
     - type
