--- a/SmartSpot/new_model.yaml
+++ b/SmartSpot/new_model.yaml
@@ -7,15 +7,21 @@ SmartSpot:
     announcedUrl:
       description: 'URL broadcasted by the device'
       format: uri
-      type: string
+      type: Property
+      x-ngsi:
+        model: https://schema.org/URL
     announcementPeriod:
       description: 'Period between announcements in milliseconds'
       maximum: 4000
       minimum: 100
-      type: integer
+      type: Property
+      x-ngsi:
+        model: https://schema.org/Number
     availability:
       description: 'Specifies the time intervals in which this interactive service is available, but this is a general information while Smart Spots have their own real availability in order to allow advanced configurations'
-      type: string
+      type: Property
+      x-ngsi:
+        model: https://schema.org/openingHours
     bluetoothChannel:
       description: 'Bluetooth channels where to transmit the announcement'
       enum:
@@ -26,11 +32,15 @@ SmartSpot:
         - 38,39
         - 37,39
         - 37,38,39
-      type: string
+      type: Property
+      x-ngsi:
+        model: ' https://schema.org/Text'
     coverageRadius:
       description: 'Radius of the spot coverage area in meters'
       minimum: 1
-      type: integer
+      type: Property
+      x-ngsi:
+        model: https://schema.org/Number
     dataProvider:
       description: 'A sequence of characters identifying the provider of the harmonised data entity.'
       type: Property
@@ -55,6 +65,8 @@ SmartSpot:
         - description: 'Property. Identifier format of any NGSI entity'
           format: uri
           type: string
+      description: 'Unique identifier of the entity'
+      type: Property
     name:
       description: 'The name of this item.'
       type: Property
@@ -62,9 +74,12 @@ SmartSpot:
       description: 'A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)'
       items:
         anyOf: *smartspot_-_properties_-_owner_-_items_-_anyof
+        description: 'Property. Unique identifier of the entity'
       type: Property
     refSmartPointOfInteraction:
       anyOf: *smartspot_-_properties_-_owner_-_items_-_anyof
+      description: 'Unique identifier of the entity'
+      type: Property
     seeAlso:
       description: 'list of uri pointing to additional resources about the item'
       oneOf:
@@ -77,20 +92,20 @@ SmartSpot:
           type: string
       type: Property
     signalStrength:
-      description: 'Signal strength to adjust the announcement range'
+      description: 'Signal strength to adjust the announcement range. Enum:''highest, lowest, medium'''
       enum:
+        - highest
         - lowest
         - medium
-        - highest
-      type: string
+      type: Property
     source:
       description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
       type: Property
     type:
-      description: 'NGSI Entity type'
+      description: 'NGSI Entity type. It has to be SmartSpot'
       enum:
         - SmartSpot
-      type: string
+      type: Property
   required:
     - id
     - type
