--- a/SmartSpot/model.yaml
+++ b/SmartSpot/model.yaml
@@ -84,8 +84,8 @@ SmartSpot:
       description: 'list of uri pointing to additional resources about the item'
       oneOf:
         - items:
-            - format: uri
-              type: string
+            format: uri
+            type: string
           minItems: 1
           type: array
         - format: uri
