--- a/SmartPointOfInteraction/model.yaml
+++ b/SmartPointOfInteraction/model.yaml
@@ -22,18 +22,22 @@ SmartPointOfInteraction:
         streetAddress:
           description: 'Property. The street address. Model:''https://schema.org/streetAddress'''
           type: string
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/address
+        type: Property
     alternateName:
       description: 'An alternative name for this item'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     applicationUrl:
       description: 'This field specifies the real URL containing the solution or application (information, co-creation, etc) while the SmartSpot ''announcedUrl'' field specifies the broadcast URL which could be this same URL or a shortened one'
       format: uri
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/URL
+        type: Property
     areaCovered:
       $id: https://geojson.org/schema/Geometry.json
       $schema: "http://json-schema.org/draft-07/schema#"
@@ -183,14 +187,16 @@ SmartPointOfInteraction:
       title: 'GeoJSON Geometry'
     areaServed:
       description: 'The geographic area where a service or offered item is provided'
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/Text
+        type: Property
     availability:
       description: 'Specifies the time intervals in which this interactive service is generally available. It is noteworthy that Smart Spots have their own real availability in order to allow advanced configurations. The syntax must be conformant with schema.org. For instance, a service which is only active on weekdays will be encoded as ''availability'': ''Mo,Tu,We,Th,Fr,Sa 09:00-20:00''.'
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/openingHours
+        type: Property
     category:
       description: 'Defines the type of interaction. Enum:''co-creation, entertainment, information, infotainment'''
       items:
@@ -201,24 +207,33 @@ SmartPointOfInteraction:
           - infotainment
         type: string
       minItems: 1
-      type: Property
+      type: array
       uniqueItems: true
       x-ngsi:
         model: http://schema.org/Text
+        type: Property
     dataProvider:
       description: 'A sequence of characters identifying the provider of the harmonised data entity.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     dateCreated:
       description: 'Entity creation timestamp. This will usually be allocated by the storage platform.'
       format: date-time
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     dateModified:
       description: 'Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.'
       format: date-time
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     description:
       description: 'A description of this item'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     id:
       anyOf: &smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
         - description: 'Property. Identifier format of any NGSI entity'
@@ -230,7 +245,8 @@ SmartPointOfInteraction:
           format: uri
           type: string
       description: 'Unique identifier of the entity'
-      type: Property
+      x-ngsi:
+        type: Property
     location:
       description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
@@ -382,36 +398,43 @@ SmartPointOfInteraction:
             - coordinates
           title: 'GeoJSON MultiPolygon'
           type: object
-      type: Geoproperty
+      x-ngsi:
+        type: Geoproperty
     name:
       description: 'The name of this item.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     owner:
       description: 'A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
-      type: Property
+      type: array
+      x-ngsi:
+        type: Property
     refRelatedEntity:
       description: 'List of entities improved with this Smart Point of Interaction'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: Relationship
+      type: array
       uniqueItems: true
       x-ngsi:
         model: 'The entity type could be any such as a Parking, Point of Interest, etc.http://schema.org/Text'
+        type: Relationship
     refSmartSpot:
       description: ' References to the Smart Spot devices which are part of the Smart Point of Interaction'
       items:
         anyOf: *smartpointofinteraction_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: Property
+      type: array
       uniqueItems: true
       x-ngsi:
         model: https://schema.org/URL
+        type: Property
     seeAlso:
       description: 'list of uri pointing to additional resources about the item'
       oneOf:
@@ -422,15 +445,20 @@ SmartPointOfInteraction:
           type: array
         - format: uri
           type: string
-      type: Property
+      x-ngsi:
+        type: Property
     source:
       description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     type:
       description: 'NGSI Entity type. It has to be SmartPointOfInteraction'
       enum:
         - SmartPointOfInteraction
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
   required:
     - id
     - type
