--- a/SmartSpot/model.yaml
+++ b/SmartSpot/model.yaml
@@ -147,3 +147,9 @@ SmartSpot:
     - id
     - type
   type: object
+  x-derived-from: ""
+  x-disclaimer: 'copyleft (c) 2021 Contributors to Smart Data Models Program'
+  x-license-url: https://github.com/smart-data-models/dataModel.PointOfInteraction/blob/master/SmartSpot/LICENSE.md
+  x-model-schema: https://smart-data-models.github.io/dataModel.PointOfInteraction/SmartSpot/schema.json
+  x-model-tags: ""
+  x-version: 0.1.0
