--- a/SmartSpot/model.yaml
+++ b/SmartSpot/model.yaml
@@ -148,7 +148,7 @@ SmartSpot:
     - type
   type: object
   x-derived-from: ""
-  x-disclaimer: 'copyleft (c) 2021 Contributors to Smart Data Models Program'
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2021 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.PointOfInteraction/blob/master/SmartSpot/LICENSE.md
   x-model-schema: https://smart-data-models.github.io/dataModel.PointOfInteraction/SmartSpot/schema.json
   x-model-tags: ""
