missing year in CONTRIBUTORS.yaml

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -7,21 +7,25 @@ contributors:
     organization: CanteraFonseca.EU
     project: null
     comments: null
+    year: 2022
   - name: Dmitrii
     surname: Demin
     mail: mail@demin.co
     organization: null
     project: null
     comments: null
+    year: 2022
   - name: Jason
     surname: Fox
     mail: null
     organization: Fiware
     project: null
     comments: null
+    year: 2022
   - name: Joud
     surname: Sayed Issa
     mail: joudsayedissa@gmail.com
     organization: null
     project: null
     comments: null
+    year: 2022
